# mysterium

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
mysterium/: __init__.py  config.py  main.py
mysterium/agents/: __init__.py
mysterium/clients/: rag_client.py
mysterium/routers/: __init__.py  documents.py  research.py
mysterium/static/: index.html
mysterium/static/css/: style.css
mysterium/static/js/: app.js
